--- a/LogBook.html
+++ b/LogBook.html
@@ -14,7 +14,7 @@
             <div class="w-100p h-100p d-flex" style="height: 150%;">
                 <div class="h-100p">
                     <div class="w-200 h-90p br-50p d-flex of-hidden">
-                        <img class="w-100p h-100p" src="elvis\newProfile.jpg" alt="">
+                        <img class="w-100p h-100p" src="newProfile.jpg" alt="">
                     </div>
                 </div>
                 <div class="w-100p h-100p mg-l-20 mg-t-20 d-flex fd-column" style="width: 220%;">
