--- a/LogBook.html
+++ b/LogBook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industrial Training Report</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     
 
 </head>
@@ -14,7 +14,7 @@
             <div class="w-100p h-100p d-flex" style="height: 150%;">
                 <div class="h-100p">
                     <div class="w-200 h-90p br-50p d-flex of-hidden">
-                        <img class="w-100p h-100p" src="https://raw.githubusercontent.com/egiru/Elvis-Lau-BS21110308/main/images/profile.jpg" alt="">
+                        <img class="w-100p h-100p" src="images/profile.jpg" alt="Profile Picture">
                     </div>
                 </div>
                 <div class="w-100p h-100p mg-l-20 mg-t-20 d-flex fd-column" style="width: 220%;">
