update image naming

--- a/LogBook.html
+++ b/LogBook.html
@@ -191,11 +191,11 @@
                 <div class="w-100p" style="width: 200%;">
                 <details>
                     <summary>Show / Hide Images</summary>
-                    <img class="zoomable w-75p" src="elvis/m5-1.png" alt="Month 5">
-                    <img class="zoomable w-75p" src="elvis/m5-2.png" alt="Month 5">
-                    <img class="zoomable w-75p" src="elvis/m5-3.png" alt="Month 5">
-                    <img class="zoomable w-75p" src="elvis/m5-4.png" alt="Month 5">
-                    <img class="zoomable w-75p" src="elvis/m5-5.png" alt="Month 5">
+                    <img class="zoomable w-75p" src="elvis/m5-1.jpg" alt="Month 5">
+                    <img class="zoomable w-75p" src="elvis/m5-2.jpg" alt="Month 5">
+                    <img class="zoomable w-75p" src="elvis/m5-3.jpg" alt="Month 5">
+                    <img class="zoomable w-75p" src="elvis/m5-4.jpg" alt="Month 5">
+                    <img class="zoomable w-75p" src="elvis/m5-5.jpg" alt="Month 5">
                 </details>
                 </div>
             </div>
