--- a/LogBook.html
+++ b/LogBook.html
@@ -162,9 +162,10 @@
                 <div class="w-100p" style="width: 80%;">
                     <details>
                         <summary>Show / Hide Images</summary>
-                        <img class="zoomable w-75p" src="elvis/m4-v1.jpg" alt="Month 4">
+                        <img class="zoomable w-75p" src="elvis/m4-v1.png" alt="Month 4">
                         <img class="zoomable w-70p" src="elvis/m4-v2.jpg" alt="Month 4">
                         <img class="zoomable w-75p" src="elvis/m4-v3.png" alt="Month 4">
+                        <img class="zoomable w-75p" src="elvis/m4-v4.png" alt="Month 4">
                     </details>
                 </div>
             </div>
